# sparse-city

./: .gitignore  ATTRIBUTION.md  CITATION.cff  LICENSE  LIMITATIONS.md  PROVENANCE.md  README.md  pyproject.toml  requirements.txt
.attribution/: TEMPLATE.md
.github/workflows/: ci.yml
benchmarks/seed42/: expected_greedy_abstain.json  leaderboard.json
envs/: README.md
fixtures/episodes/: seed42.json
scripts/: ci-local.sh  run.sh  write_golden.py
src/sparse_city/: __init__.py  __main__.py  cli.py  env.py  eval.py  gym_env.py  scoring.py
src/sparse_city/agents/: __init__.py  baselines.py
tests/: test_abstain.py  test_baselines.py  test_brand_lint.py  test_golden.py  test_malformed.py  test_pricing.py
