[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-city"
version = "0.1.0"
description = "Partial-observability city planning toy: buy information vs act vs abstain under budget"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Takeru Kondo" }]
dependencies = [
  "numpy>=1.24",
  "gymnasium>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
sparse-city = "sparse_city.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
